[package]
name = "daily-log"
version = "0.1.0"
description = "register daily activities"
authors = ["Eduardo DiÌaz <ediaz@dcc8090.cl>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
