[package]
name = "daily-log"
version = "0.1.0"
description = "register daily activities"
authors = ["Eduardo DiÌaz <ediaz@dcc8090.cl>"]
license = "MIT"
edition = "2024"

[lib]
name = "daily_log"
path = "src/lib.rs"

[[bin]]
name = "daily-log"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
tui-textarea = "0.7.0"

[dev-dependencies]
tempfile = "3.10"
